<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.detail.DetailActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="20dp">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/avatar"
                android:layout_width="120dp"
                android:layout_marginEnd="10dp"
                android:layout_centerVertical="true"
                android:scaleType="centerCrop"
                android:adjustViewBounds="true"
                android:layout_height="120dp"
                tools:src="@mipmap/ic_launcher"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_toEndOf="@+id/avatar">
                <TextView
                    android:id="@+id/repo_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    tools:text="Mini Whatsapp Clone"/>
                <TextView
                    android:id="@+id/user_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:textSize="14sp"
                    android:ellipsize="end"
                    android:maxLines="1"
                    tools:text="saitej-janjirala"/>

                <TextView
                    android:id="@+id/repo_stars"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:ellipsize="end"
                    android:maxLines="1"
                    tools:text="Stars:- 103" />
                <TextView
                    android:id="@+id/repo_forks"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    tools:text="Forks:- 120"
                    android:ellipsize="end"
                    android:maxLines="1"
                    />
                <TextView
                    android:id="@+id/repo_issues"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:ellipsize="end"
                    android:maxLines="1"
                    tools:text="Issues:- 32"/>
            </LinearLayout>
        </RelativeLayout>
        <TextView
            android:id="@+id/description_heading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_marginTop="8dp"
            android:text="@string/description"/>
        <TextView
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:layout_marginTop="8dp"
            tools:text="This is an excellent project"/>
        <TextView
            android:id="@+id/project_link_heading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_marginTop="8dp"
            android:text="@string/project_link"/>
        <TextView
            android:id="@+id/project_link"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:layout_marginTop="8dp"
            android:padding="4dp"
            android:maxLines="1"
            android:ellipsize="end"
            android:textColor="#0B89EA"
            tools:text="https://www.saitejajanjirala.com"/>
        <TextView
            android:id="@+id/contributors_heading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_marginTop="8dp"
            android:padding="4dp"
            android:text="@string/contibutors"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="4dp">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/contributors_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                app:spanCount="2"
                android:clipToPadding="false"
                android:paddingTop="8dp"
                tools:listitem="@layout/contributor_item" />
            <LinearLayout
                android:id="@+id/retry_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:visibility="gone"
                tools:visibility="visible">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/oops_something_went_wrong"/>
                <Button
                    android:id="@+id/retry_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/retry"
                    android:layout_marginTop="20dp"
                    android:textAllCaps="false"/>
            </LinearLayout>
            <ProgressBar
                android:id="@+id/progressbar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:visibility="gone"/>
        </RelativeLayout>

    </LinearLayout>



</androidx.core.widget.NestedScrollView>